force-app/main/default/objects/Consumption__c/Consumption__c.object-meta.xml
<CustomObject>
    <label>Consommation</label>
    <nameField>
        <displayFormat>CONSO-{0000}</displayFormat>
        <label>Numéro consommation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consommations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>