force-app/main/default/objects/Consumption__c/fields/Consommation_Moyenne__c.field-meta.xml
<CustomField>
    <fullName>Consommation_Moyenne__c</fullName>
    <label>Consommation moyenne</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>