force-app/main/default/objects/Consumption__c/fields/Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line__c</fullName>
    <label>Ligne de contrat</label>
    <referenceTo>Contract_Line__c</referenceTo>
    <relationshipLabel>Consommations</relationshipLabel>
    <relationshipName>Consumptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>