force-app/main/default/objects/Consumption__c/fields/Montant_Consomme__c.field-meta.xml
<CustomField>
    <fullName>Montant_Consomme__c</fullName>
    <label>Montant consommé</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>