force-app/main/default/objects/Consumption__c/fields/Montant_Restant__c.field-meta.xml
<CustomField>
    <fullName>Montant_Restant__c</fullName>
    <formula>Montant_Achete__c - Montant_Consomme__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant restant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>