force-app/main/default/objects/Consumption__c/fields/Periode_Debut__c.field-meta.xml
<CustomField>
    <fullName>Periode_Debut__c</fullName>
    <label>Début de période</label>
    <type>Date</type>
</CustomField>