force-app/main/default/objects/Consumption__c/fields/Periode_Fin__c.field-meta.xml
<CustomField>
    <fullName>Periode_Fin__c</fullName>
    <label>Fin de période</label>
    <type>Date</type>
</CustomField>