force-app/main/default/objects/Consumption__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manuel</fullName>
                <default>true</default>
                <label>Manuel</label>
            </value>
            <value>
                <fullName>Ludwig API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>