force-app/main/default/objects/Consumption__c/listViews/Toutes_les_consommations.listView-meta.xml
<ListView>
    <fullName>Toutes_les_consommations</fullName>
    <columns>NAME</columns>
    <columns>Contract_Line__c</columns>
    <columns>Periode_Debut__c</columns>
    <columns>Periode_Fin__c</columns>
    <columns>Montant_Achete__c</columns>
    <columns>Montant_Consomme__c</columns>
    <columns>Montant_Restant__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les consommations</label>
    <language>fr</language>
</ListView>